# FFmpegDemo

./: .gitignore  build.gradle  settings.gradle
_01_java_native_call/: build.gradle
_01_java_native_call/src/main/: AndroidManifest.xml
_01_java_native_call/src/main/cpp/: CMakeLists.txt  java_native_call.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/coroutine/: CoroutineTest1.kt  CoroutineTest2.kt  CoroutineTest3.kt
app/src/main/res/drawable/: bg_card.xml  divider_horizontal.xml
app/src/main/res/layout/: activity_brv.xml  fragment_compose.xml  fragment_jetpack_input.xml  fragment_jetpack_output.xml  fragment_multi_type.xml  item_comment.xml  item_comment_title.xml  item_divider_vertical.xml  item_group_basic.xml  item_group_title.xml  item_group_title_second.xml  item_hover_header.xml  item_multi_type_simple.xml  item_multi_type_two_span.xml  item_nested_comment.xml  item_simple.xml
app/src/main/res/values/: strings.xml
app/test/: build.gradle
app/test/src/main/: AndroidManifest.xml
brv/: build.gradle
brv/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
k_util/: build.gradle
k_util/src/main/: AndroidManifest.xml
opengles/: build.gradle
opengles/src/main/: AndroidManifest.xml
opengles/src/main/cpp/: CMakeLists.txt
opengles/src/main/cpp/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
test2/: build.gradle
test2/src/main/: AndroidManifest.xml
uiwatch/: build.gradle
(+91 files in other folders)
